feat and fix(frontend) : Fixing UI/UX design and creating a footer for the website

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/airbnb.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AIRBNB Clone</title>
+  <title>Airbnb Clone ~ A House Booking Website</title>
 </head>
 
 <body>
